--- a/editor/index.html
+++ b/editor/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>HelixPiEditor</title>
-    <script src="/helix-pi.js"></script>
+    <script src="/bundle.js"></script>
     <script src="lib/kiwi.js/build/kiwi.js"></script>
     <script src="lib/kiwipreloader.js"></script>
     <script type="text/javascript" src="src/states/play.js"></script>
