Made things like 4% more presentable

--- a/editor/index.html
+++ b/editor/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>HelixPiEditor</title>
+    <title>Helix Pi</title>
     <script src="/bundle.js"></script>
     <script src="lib/kiwi.js/build/kiwi.js"></script>
     <script src="lib/kiwipreloader.js"></script>
@@ -10,8 +10,11 @@
     <script type="text/javascript" src="src/states/intro.js"></script>
     <script type="text/javascript" src="src/states/loading.js"></script>
     <script type="text/javascript" src="src/game.js"></script>
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body style="margin:0px;padding:0px">
+    <h2>Helix Pi</h2>
     <div id="content"></div>
+    <p>Press left and right to change keyframe, and r to generate a program</p>
 </body>
 </html>
