Add a line to show expected path, tweak fitness function

--- a/editor/index.html
+++ b/editor/index.html
@@ -5,6 +5,7 @@
     <title>Helix Pi</title>
     <script src="/bundle.js"></script>
     <script src="lib/kiwi.js/build/kiwi.js"></script>
+    <script src="plugins/primitives-1.0.2.min.js"></script>
     <script src="lib/kiwipreloader.js"></script>
     <script type="text/javascript" src="src/states/play.js"></script>
     <script type="text/javascript" src="src/states/intro.js"></script>
