--- a/editor/index.html
+++ b/editor/index.html
@@ -7,7 +7,8 @@
     <script src="lib/kiwi.js/build/kiwi.js"></script>
     <script src="plugins/primitives-1.0.2.min.js"></script>
     <script src="lib/kiwipreloader.js"></script>
-    <script type="text/javascript" src="src/results.js"></script>
+    <script type="text/javascript" src="src/stores/results.js"></script>
+    <script type="text/javascript" src="src/stores/scenarios.js"></script>
     <script type="text/javascript" src="src/components/buttons.js"></script>
     <script type="text/javascript" src="src/states/editor.js"></script>
     <script type="text/javascript" src="src/states/play.js"></script>
