Add timeline to preview program

--- a/editor/index.html
+++ b/editor/index.html
@@ -9,6 +9,7 @@
     <script src="lib/kiwipreloader.js"></script>
     <script type="text/javascript" src="src/stores/results.js"></script>
     <script type="text/javascript" src="src/stores/scenarios.js"></script>
+    <script type="text/javascript" src="src/components/timeline.js"></script>
     <script type="text/javascript" src="src/components/buttons.js"></script>
     <script type="text/javascript" src="src/states/editor.js"></script>
     <script type="text/javascript" src="src/states/play.js"></script>
