--- a/editor/index.html
+++ b/editor/index.html
@@ -1,35 +1,48 @@
-﻿<!DOCTYPE html>
+<!doctype HTML>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>Helix Pi</title>
-    <script src="/bundle.js"></script>
-    <script src="lib/kiwi.js/build/kiwi.js"></script>
-    <script src="plugins/primitives-1.0.2.min.js"></script>
-    <script src="lib/kiwipreloader.js"></script>
-    <script type="text/javascript" src="src/stores/results.js"></script>
-    <script type="text/javascript" src="src/stores/scenarios.js"></script>
-    <script type="text/javascript" src="src/components/timeline.js"></script>
-    <script type="text/javascript" src="src/components/buttons.js"></script>
-    <script type="text/javascript" src="src/states/editor.js"></script>
-    <script type="text/javascript" src="src/states/play.js"></script>
-    <script type="text/javascript" src="src/states/intro.js"></script>
-    <script type="text/javascript" src="src/states/loading.js"></script>
-    <script type="text/javascript" src="src/game.js"></script>
-    <link rel="stylesheet" type="text/css" href="/styles.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <meta charset="utf-8" />
+  <title>Helix Pi</title>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-43132161-6', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+    ga('create', 'UA-43132161-6', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
-<body style="margin:0px;padding:0px">
-    <h1>Helix Pi</h1>
-    <div id="content"></div>
+<body>
+  <h1>
+    Helix Pi
+  </h1>
+
+  <div class="introduction">
+  <p>
+    Helix Pi is an easy way for anyone to make, play and mod games. No programming required.
+  </p>
+
+  <p>
+    It's still very much a work in progress, but you can try it out right now, in your browser.
+  </p>
+
+  <div class="links">
+    <span>
+      <a href='/editor'>Make</a>
+      /
+    </span>
+    <span class="disabled">
+      Play
+      /
+    </span>
+    <span class="disabled">
+      Mod
+    </span>
+  </div>
+
+  <div class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/4JMOfCUuoZk" frameborder="0" allowfullscreen></iframe>
+  </div>
 </body>
-</html>
