--- a/editor/index.html
+++ b/editor/index.html
@@ -19,14 +19,7 @@
     Helix Pi
   </h1>
 
-  <div class="introduction">
-  <p>
-    Helix Pi is an easy way for anyone to make, play and mod games. No programming required.
-  </p>
-
-  <p>
-    It's still very much a work in progress, but you can try it out right now, in your browser.
-  </p>
+  <a href="https://github.com/Widdershin/helix-pi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png"></a>
 
   <div class="links">
     <span>
@@ -41,6 +34,17 @@
       Mod
     </span>
   </div>
+
+  <div class="introduction">
+    <p>
+      Helix Pi is an easy way for anyone to make, play and mod games. No programming required.
+    </p>
+
+    <p>
+      It's still very much a work in progress, but you can try it out right now, in your browser.
+    </p>
+  </div>
+
 
   <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/4JMOfCUuoZk" frameborder="0" allowfullscreen></iframe>
